# serializer version: 1
# name: test_list_example
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/example.json
          example-8597e52a
  
    ''',
  })
# ---
# name: test_list_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_invalid_target_skip_invalid
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      [PROJECT_ROOT]/scenarios/example.json
          example-8597e52a
  
    ''',
  })
# ---
# name: test_list_no_sources
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      requires-package-does-not-exist-5a1a4a35
      requires-exact-version-does-not-exist-7cff23d9
      requires-greater-version-does-not-exist-63569c9e
      requires-less-version-does-not-exist-2af6fa02
      transitive-requires-package-does-not-exist-64b04b2b
      example-8597e52a
      excluded-only-version-72f0d052
      excluded-only-compatible-version-d6ce69da
      dependency-excludes-range-of-compatible-versions-5824fb81
      dependency-excludes-non-contiguous-range-of-compatible-versions-119f929b
      extra-required-c1e0ed38
      missing-extra-de25a6db
      multiple-extras-required-502cbb59
      extra-incompatible-with-extra-a5547b80
      extra-incompatible-with-extra-not-requested-8bb31c23
      extra-incompatible-with-root-aca6971b
      extra-does-not-exist-backtrack-c4307e58
      direct-incompatible-versions-c0e7adfa
      transitive-incompatible-with-root-version-a13da883
      transitive-incompatible-with-transitive-ec82e315
      package-only-prereleases-472fcc7e
      package-only-prereleases-in-range-1017748b
      requires-package-only-prereleases-in-range-global-opt-in-95140069
      requires-package-prerelease-and-final-any-909975d8
      package-prerelease-specified-only-final-available-6f8bea9f
      package-prerelease-specified-only-prerelease-available-48d4bba0
      package-prerelease-specified-mixed-available-2b1193a7
      package-multiple-prereleases-kinds-72919cf7
      package-multiple-prereleases-numbers-cecdb92d
      transitive-package-only-prereleases-e3c94488
      transitive-package-only-prereleases-in-range-20238f1b
      transitive-package-only-prereleases-in-range-opt-in-d65d5fdf
      transitive-prerelease-and-stable-dependency-d62255d0
      transitive-prerelease-and-stable-dependency-opt-in-0778b0eb
      transitive-prerelease-and-stable-dependency-many-versions-cc6a6eac
      transitive-prerelease-and-stable-dependency-many-versions-holes-041e36bc
      requires-python-version-does-not-exist-4486c0e5
      requires-python-version-less-than-current-d4ea58de
      requires-python-version-greater-than-current-741c8854
      requires-python-version-greater-than-current-patch-0044ac94
      requires-python-version-greater-than-current-many-da5bd150
      requires-python-version-greater-than-current-backtrack-3204bc0a
      requires-python-version-greater-than-current-excluded-874cae6d
      requires-incompatible-python-version-compatible-override-3f4ac9b2
      requires-compatible-python-version-incompatible-override-fd6db412
      requires-incompatible-python-version-compatible-override-no-wheels-3521037f
      requires-incompatible-python-version-compatible-override-no-wheels-available-system-c68bcf5c
      requires-incompatible-python-version-compatible-override-no-compatible-wheels-d7b25a2d
      requires-incompatible-python-version-compatible-override-other-wheel-a9179f0c
      requires-python-patch-version-override-no-patch-e1884826
      requires-python-patch-version-override-patch-compatible-91b4bcfc
      specific-tag-and-default-8f7a81f1
      only-wheels-a874f41e
      no-wheels-0278f343
      no-wheels-with-matching-platform-0c9f8397
      no-sdist-no-wheels-with-matching-platform-e8c8850f
      no-wheels-no-build-662cbd94
      only-wheels-no-binary-dd137625
      no-build-9ff1e173
      no-binary-10e961b8
      package-only-yanked-e3de7eb4
      package-only-yanked-in-range-84b3720e
      requires-package-yanked-and-unyanked-any-93eac6d7
      package-yanked-specified-mixed-available-3325916e
      transitive-package-only-yanked-9ec30fe2
      transitive-package-only-yanked-in-range-872d714e
      transitive-package-only-yanked-in-range-opt-in-1bbd5d1b
      transitive-yanked-and-unyanked-dependency-eb1ba5f5
      transitive-yanked-and-unyanked-dependency-opt-in-f0760ee9
  
    ''',
  })
# ---
# name: test_list_no_target_finds_all_valid_scenarios
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/does-not-exist.json
          requires-package-does-not-exist-5a1a4a35
          requires-exact-version-does-not-exist-7cff23d9
          requires-greater-version-does-not-exist-63569c9e
          requires-less-version-does-not-exist-2af6fa02
          transitive-requires-package-does-not-exist-64b04b2b
      scenarios/example.json
          example-8597e52a
      scenarios/excluded.json
          excluded-only-version-72f0d052
          excluded-only-compatible-version-d6ce69da
          dependency-excludes-range-of-compatible-versions-5824fb81
          dependency-excludes-non-contiguous-range-of-compatible-versions-119f929b
      scenarios/extras.json
          extra-required-c1e0ed38
          missing-extra-de25a6db
          multiple-extras-required-502cbb59
          extra-incompatible-with-extra-a5547b80
          extra-incompatible-with-extra-not-requested-8bb31c23
          extra-incompatible-with-root-aca6971b
          extra-does-not-exist-backtrack-c4307e58
      scenarios/incompatible-versions.json
          direct-incompatible-versions-c0e7adfa
          transitive-incompatible-with-root-version-a13da883
          transitive-incompatible-with-transitive-ec82e315
      scenarios/prereleases.json
          package-only-prereleases-472fcc7e
          package-only-prereleases-in-range-1017748b
          requires-package-only-prereleases-in-range-global-opt-in-95140069
          requires-package-prerelease-and-final-any-909975d8
          package-prerelease-specified-only-final-available-6f8bea9f
          package-prerelease-specified-only-prerelease-available-48d4bba0
          package-prerelease-specified-mixed-available-2b1193a7
          package-multiple-prereleases-kinds-72919cf7
          package-multiple-prereleases-numbers-cecdb92d
          transitive-package-only-prereleases-e3c94488
          transitive-package-only-prereleases-in-range-20238f1b
          transitive-package-only-prereleases-in-range-opt-in-d65d5fdf
          transitive-prerelease-and-stable-dependency-d62255d0
          transitive-prerelease-and-stable-dependency-opt-in-0778b0eb
          transitive-prerelease-and-stable-dependency-many-versions-cc6a6eac
          transitive-prerelease-and-stable-dependency-many-versions-holes-041e36bc
      scenarios/requires-python.json
          requires-python-version-does-not-exist-4486c0e5
          requires-python-version-less-than-current-d4ea58de
          requires-python-version-greater-than-current-741c8854
          requires-python-version-greater-than-current-patch-0044ac94
          requires-python-version-greater-than-current-many-da5bd150
          requires-python-version-greater-than-current-backtrack-3204bc0a
          requires-python-version-greater-than-current-excluded-874cae6d
          requires-incompatible-python-version-compatible-override-3f4ac9b2
          requires-compatible-python-version-incompatible-override-fd6db412
          requires-incompatible-python-version-compatible-override-no-wheels-3521037f
          requires-incompatible-python-version-compatible-override-no-wheels-available-system-c68bcf5c
          requires-incompatible-python-version-compatible-override-no-compatible-wheels-d7b25a2d
          requires-incompatible-python-version-compatible-override-other-wheel-a9179f0c
          requires-python-patch-version-override-no-patch-e1884826
          requires-python-patch-version-override-patch-compatible-91b4bcfc
      scenarios/wheels.json
          specific-tag-and-default-8f7a81f1
          only-wheels-a874f41e
          no-wheels-0278f343
          no-wheels-with-matching-platform-0c9f8397
          no-sdist-no-wheels-with-matching-platform-e8c8850f
          no-wheels-no-build-662cbd94
          only-wheels-no-binary-dd137625
          no-build-9ff1e173
          no-binary-10e961b8
      scenarios/yanked.json
          package-only-yanked-e3de7eb4
          package-only-yanked-in-range-84b3720e
          requires-package-yanked-and-unyanked-any-93eac6d7
          package-yanked-specified-mixed-available-3325916e
          transitive-package-only-yanked-9ec30fe2
          transitive-package-only-yanked-in-range-872d714e
          transitive-package-only-yanked-in-range-opt-in-1bbd5d1b
          transitive-yanked-and-unyanked-dependency-eb1ba5f5
          transitive-yanked-and-unyanked-dependency-opt-in-f0760ee9
  
    ''',
  })
# ---
# name: test_list_no_versions
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/does-not-exist.json
          requires-package-does-not-exist
          requires-exact-version-does-not-exist
          requires-greater-version-does-not-exist
          requires-less-version-does-not-exist
          transitive-requires-package-does-not-exist
      scenarios/example.json
          example
      scenarios/excluded.json
          excluded-only-version
          excluded-only-compatible-version
          dependency-excludes-range-of-compatible-versions
          dependency-excludes-non-contiguous-range-of-compatible-versions
      scenarios/extras.json
          extra-required
          missing-extra
          multiple-extras-required
          extra-incompatible-with-extra
          extra-incompatible-with-extra-not-requested
          extra-incompatible-with-root
          extra-does-not-exist-backtrack
      scenarios/incompatible-versions.json
          direct-incompatible-versions
          transitive-incompatible-with-root-version
          transitive-incompatible-with-transitive
      scenarios/prereleases.json
          package-only-prereleases
          package-only-prereleases-in-range
          requires-package-only-prereleases-in-range-global-opt-in
          requires-package-prerelease-and-final-any
          package-prerelease-specified-only-final-available
          package-prerelease-specified-only-prerelease-available
          package-prerelease-specified-mixed-available
          package-multiple-prereleases-kinds
          package-multiple-prereleases-numbers
          transitive-package-only-prereleases
          transitive-package-only-prereleases-in-range
          transitive-package-only-prereleases-in-range-opt-in
          transitive-prerelease-and-stable-dependency
          transitive-prerelease-and-stable-dependency-opt-in
          transitive-prerelease-and-stable-dependency-many-versions
          transitive-prerelease-and-stable-dependency-many-versions-holes
      scenarios/requires-python.json
          requires-python-version-does-not-exist
          requires-python-version-less-than-current
          requires-python-version-greater-than-current
          requires-python-version-greater-than-current-patch
          requires-python-version-greater-than-current-many
          requires-python-version-greater-than-current-backtrack
          requires-python-version-greater-than-current-excluded
          requires-incompatible-python-version-compatible-override
          requires-compatible-python-version-incompatible-override
          requires-incompatible-python-version-compatible-override-no-wheels
          requires-incompatible-python-version-compatible-override-no-wheels-available-system
          requires-incompatible-python-version-compatible-override-no-compatible-wheels
          requires-incompatible-python-version-compatible-override-other-wheel
          requires-python-patch-version-override-no-patch
          requires-python-patch-version-override-patch-compatible
      scenarios/wheels.json
          specific-tag-and-default
          only-wheels
          no-wheels
          no-wheels-with-matching-platform
          no-sdist-no-wheels-with-matching-platform
          no-wheels-no-build
          only-wheels-no-binary
          no-build
          no-binary
      scenarios/yanked.json
          package-only-yanked
          package-only-yanked-in-range
          requires-package-yanked-and-unyanked-any
          package-yanked-specified-mixed-available
          transitive-package-only-yanked
          transitive-package-only-yanked-in-range
          transitive-package-only-yanked-in-range-opt-in
          transitive-yanked-and-unyanked-dependency
          transitive-yanked-and-unyanked-dependency-opt-in
  
    ''',
  })
# ---
# name: test_list_one_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_short_names
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/does-not-exist.json
          5a1a4a35
          7cff23d9
          63569c9e
          2af6fa02
          64b04b2b
      scenarios/example.json
          8597e52a
      scenarios/excluded.json
          72f0d052
          d6ce69da
          5824fb81
          119f929b
      scenarios/extras.json
          c1e0ed38
          de25a6db
          502cbb59
          a5547b80
          8bb31c23
          aca6971b
          c4307e58
      scenarios/incompatible-versions.json
          c0e7adfa
          a13da883
          ec82e315
      scenarios/prereleases.json
          472fcc7e
          1017748b
          95140069
          909975d8
          6f8bea9f
          48d4bba0
          2b1193a7
          72919cf7
          cecdb92d
          e3c94488
          20238f1b
          d65d5fdf
          d62255d0
          0778b0eb
          cc6a6eac
          041e36bc
      scenarios/requires-python.json
          4486c0e5
          d4ea58de
          741c8854
          0044ac94
          da5bd150
          3204bc0a
          874cae6d
          3f4ac9b2
          fd6db412
          3521037f
          c68bcf5c
          d7b25a2d
          a9179f0c
          e1884826
          91b4bcfc
      scenarios/wheels.json
          8f7a81f1
          a874f41e
          0278f343
          0c9f8397
          e8c8850f
          662cbd94
          dd137625
          9ff1e173
          10e961b8
      scenarios/yanked.json
          e3de7eb4
          84b3720e
          93eac6d7
          3325916e
          9ec30fe2
          872d714e
          1bbd5d1b
          eb1ba5f5
          f0760ee9
  
    ''',
  })
# ---
# name: test_list_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
